Displaying available dates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,8 @@
   </h1>
 
   <mat-form-field>
-    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+    <input matInput [matDatepicker]="picker" placeholder="Choose a date" (click)="openDatePicker()">
+    <mat-datepicker #picker (opened)="datePickerOpened()"></mat-datepicker>
   </mat-form-field>
 
 </div>
